--- a/gip.html
+++ b/gip.html
@@ -62,7 +62,7 @@ Deze zijn in volledig eigen beheer. Het intern netwerk bevat de serverroom en 3 
 
 <button onclick="myFunction('Demo4')" class="w3-button w3-white w3-block w3-left-align w3-mobile w3-padding-large"><span class="w3-left">Web Applicatie</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo4" class="w3-container w3-hide"> 
-			<a href="https://github.com/karamk-immalle/WebAppGIP"></a>
+			<a href="https://github.com/karamk-immalle/WebAppGIP">WebAppGIP</a>
 </div>
 
 <button onclick="myFunction('Demo5')" class="w3-button w3-blue w3-block w3-left-align w3-mobile w3-padding-large"><span class="w3-left"> Remotr</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
