english video added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
-<p><b>Welkom</b> op mijn website. Mijn naam is Karam Khalil, ik ben 17 jaar oud,  kom uit Syrië en  studeer IT en Netwerken aan het Immaculata Instituut. Ondertussen ben ik al ongeveer twee jaar in België. Ik heb deze richting gekozen omdat ik graag met computers  werk. Ik zwem graag en ik kijk graag films en tv-series. In de toekomst ga ik waarschijnlijk informatica studeren. Op deze site vindt u alles wat ik geleerd heb, onder de Stage-tab vindt u  dagverslagen over wat ik gedaan heb tijdens mijn stage en ook vindt u een fotoreportage. Ten slotte voor meer informatie over wie ik ben,  kunt u op “over mij” klikken. Ik wens u nog veel leesplezier.</p>
+<p><b>Welkom</b> op mijn website. Mijn naam is Karam Khalil, ik ben 18 jaar oud,  kom uit Syrië en  studeer IT en Netwerken aan het Immaculata Instituut. Ondertussen ben ik al ongeveer twee jaar in België. Ik heb deze richting gekozen omdat ik graag met computers  werk. Ik zwem graag en ik kijk graag films en tv-series. In de toekomst ga ik waarschijnlijk informatica studeren. Op deze site vindt u alles wat ik geleerd heb, onder de Stage-tab vindt u  dagverslagen over wat ik gedaan heb tijdens mijn stage en ook vindt u een fotoreportage. Ten slotte voor meer informatie over wie ik ben,  kunt u op “over mij” klikken. Ik wens u nog veel leesplezier.</p>
+</div>
+<div class="w3-container w3-section w3-content w3-padding-64">
+<video width="600" height="320" class="w3-container w3-mobile" controls>
+			<source src="vid/GIP-task_English_Karam_v2.mp4" type="video/mp4">
+			</video>
 </div>
 </div>
 
